# nmt-quant-data-binance-inject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ch.py  config.py  docker-compose.yml  migrate.py  pairs.yaml  pyproject.toml  symbol_info.py  symbols.py  tables.py  util.py
.github/workflows/: deploy.yml
backfill/: main.py  parsers.py  vision.py
live/: main.py  parsers.py  poll_metrics.py  poll_oi_funding.py  poll_trades.py  wsmanager.py
tests/: conftest.py  test_flusher.py  test_resolve_ch_host.py  test_supervisor.py
