[tool.poetry]
name = "tick-crawler"
version = "0.1.0"
description = "Binance USDM tick-data crawler (Vision backfill + live WS) -> ClickHouse"
authors = ["minh"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-connect = ">=0.7"
requests = ">=2.31"
websockets = ">=12.0"
python-dotenv = ">=1.0"
python-socks = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
